# IntellectualSystem

lab1/: CMakeLists.txt  backSearch.cpp  bidirectional.cpp  main.cpp  tree_search.h
lab2/: CMakeLists.txt  Heuristics.cpp  Heuristics.h  Node.h  Search_algs.cpp  Search_algs.h  fifteens.cpp
lab3/: CMakeLists.txt  Ugolki.h  algoritmIDS.h  gameBorder.h  logGame.txt  main.cpp  Правила.txt
lab4/: CMakeLists.txt  Ugolki.h  border.h  main.cpp
